
[COLOR="DeepSkyBlue"]4.1.5 (102)[/COLOR]:
[LIST]
[*] Update version number displayed on addon Settings page.
[*] Releasing this version because in testing, categories remain "removed" from bag settings after logout or reloadui. (I think that the problem was fixed in v4.1.4, but I know it's not in this version.)
[/LIST]

[COLOR="DeepSkyBlue"]4.1.4 (101)[/COLOR]:
[LIST]
[*] After consideration, I've added the variable AutoCategory.Inited to the AutoCategory_API.lua to signify that it is protected from deletion the next time that I'm cleaning out unused code. Addon developers can now rely on it continuing to exist.
[*] Fix error thrown when deleting a category.
[/LIST]

[COLOR="DeepSkyBlue"]4.1.3 (100)[/COLOR]:
[LIST]
[*] Fix typo.
[/LIST]

[COLOR="DeepSkyBlue"]4.1.2 (99)[/COLOR]:
[LIST]
[*] Adds back in the AutoCategory.Inited variable for BetterUI users even though AutoCategory does not use it itself. Credit to Daeymon for finding this.
[*] Refactoring.
[/LIST]

[COLOR="DeepSkyBlue"]4.1.1 (98)[/COLOR]:
[LIST]
[*] Fixed the sptype("script") convenience match to properly match against any affix, focus, or signature scripts.
[*] Fix saving newly created categories.
[*] Fixed lack of tags in dropdowns.
[*] Fixed rule duplication in conversion from 3.6.7.
[/LIST]

[COLOR="DeepSkyBlue"]4.1 (97)[/COLOR]:
[LIST]
[*] Integration with GridList returns!!
[/LIST]

[COLOR="DeepSkyBlue"]4.0.2 (96)[/COLOR]:
[LIST]
[*] Fix a problem in rule conversion where a bag is missing from the saved variables. (Reported as: AutoCategory.lua:288: attempt to index a nil value)
[/LIST]

[COLOR="DeepSkyBlue"]4.0 (95)[/COLOR]:
[COLOR="Red"]WARNING: BEFORE YOU UPGRADE - [/COLOR] be sure to back up (make a copy of) your SavedVariables\AutoCategory.lua file. The way that your category rules are stored has changed. This backup will preserve your old rules for you to be able to refer to if necessary.
[LIST]
[*] Documentation in the wiki (help) has been updated and expanded.