@@ -2,8 +2,8 @@
 ## APIVersion: 101042 101043
 ## Author: Shadowfen, crafty35a, RockingDice, Friday_the13_rus
 ## Description: Inventory categorization. Type "/ac" for settings
-## Version: 4.1.5
-## AddOnVersion: 102
+## Version: 4.1.7
+## AddOnVersion: 104
 ## SavedVariables: AutoCategorySavedVars AutoCatRules
 ## DependsOn: LibAddonMenu-2.0>=36 LibCustomMenu LibSFUtils>=52 LibMediaProvider-1.0>=30 LibDebugLogger>=263
 ## OptionalDependsOn: GearChangerByIakoni FCOItemSaver QuickMenu ItemSaver ItemMarker UnknownTracker>=75 MasterMerchant TamrielTradeCentre SetTrack CharacterKnowledge
